web: fix gpg key link
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Sami Kerola<br>
 </tr>
 <tr>
 <td>gnupg</td>
-<td class=d><a href="http://keys.gnupg.net/pks/lookup?op=get&search=0x8ED396E37E38D471A00530D3A9553245FDE9B739">8ED396E37E38D471A00530D3A9553245FDE9B739</a></td>
+<td class=d><a href="https://keyserver.ubuntu.com/pks/lookup?search=8ED396E37E38D471A00530D3A9553245FDE9B739&fingerprint=on&op=index">8ED396E37E38D471A00530D3A9553245FDE9B739</a></td>
 </tr>
 <tr>
 <td>web page</td>
