--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel=canonical href=https://kerolasa.iki.fi>
 <meta content="width=device-width,minimum-scale=1,initial-scale=1" name=viewport>
 <meta name="description" content="Personal homepage of Sami Kerola including contact info.">
+<meta property="og:image" content="https://kerolasa.iki.fi/me_london.jpg">
 <meta content=en name=language>
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
 <meta content="index, follow" name=robots>
@@ -60,7 +61,6 @@ Sami Kerola<br>
 </div>
 <span itemprop=birthDate content=1977-04-28></span>
 <span itemprop=gender content=male></span>
-<span itemprop=image content="https://kerolasa.iki.fi/me_london.jpg"></span>
 <span itemprop=sameas content="https://en.gravatar.com/kerolasa"></span>
 <span itemprop=sameas content="https://github.com/kerolasa/"></span>
 <span itemprop=sameas content="https://savannah.gnu.org/users/kerolasa"></span>
