web: better css
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/defunct.html
+++ b/defunct.html
@@ -2,11 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN">
 <html>
 <head>
-<style xml:space="preserve" type="text/css">
-/**/ BODY {
-        background-color : #ffffff; margin : 10px; max-width: 700px; }
-        /**/
-</style>
+<link type="text/css" rel="stylesheet" href="kerolasa.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>How can I kill a defunct process</title>
 </head>
