--- a/falafel-en.html
+++ b/falafel-en.html
@@ -1,76 +1,71 @@
 <?xml version="1.0" encoding="us-ascii"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link type="text/css" rel="stylesheet" href="kerolasa.css">
 <style xml:space="preserve" type="text/css">
 /*<![CDATA[*/
- SPAN {font-style: italic;}
+SPAN.italic {font-style: italic}
 /*]]>*/
 </style>
-<meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
-<meta name="author" content="Sami Kerola" />
-<meta name="classification" content="recipe" />
-<meta name="contact_addr" content="kerolasa@iki.fi" />
-<meta name="copyright" content="Copyright Sami Kerola" />
-<meta name="description" content="falafel recipe" />
-<meta name="distribution" content="global" />
-<meta name="abstract" content="falafel recipe" />
-<meta name="keywords" content="falafel, recipe, cooking, vegetarian" />
-<meta name="language" content="en" />
-<meta name="owner" content="Sami Kerola" />
-<meta name="rating" content="general" />
-<meta name="revisit-after" content="15" />
-<meta name="robots" content="index, follow" />
-<link type="text/css" rel="stylesheet" href="kerolasa.css" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="author" content="Sami Kerola">
+<meta name="classification" content="recipe">
+<meta name="contact_addr" content="kerolasa@iki.fi">
+<meta name="copyright" content="Copyright Sami Kerola">
+<meta name="description" content="falafel recipe">
+<meta name="distribution" content="global">
+<meta name="abstract" content="falafel recipe">
+<meta name="keywords" content="falafel, recipe, cooking, vegetarian">
+<meta name="language" content="en">
+<meta name="owner" content="Sami Kerola">
+<meta name="rating" content="general">
+<meta name="revisit-after" content="15">
+<meta name="robots" content="index, follow">
+<link type="text/css" rel="stylesheet" href="kerolasa.css">
 <title>Sami's Falafel</title>
 </head>
 <body>
 <h2>Sami's Falafel</h2>
 <h3>Ingredients</h3>
-<p>Get split <span>chickpeas</span>, 4 decilitres is enough. Keep
-under water for couple hours.</p>
-<p>Get rid of water. Squash chickpea's, use of cutting mixer or
-stick blener makes the task easy. When done add following
-substances to dough.</p>
+<p>Get split <span class="italic">chickpeas</span>, 4 decilitres is enough.
+Keep under water for couple hours.</p>
+<p>Get rid of water. Squash chickpea's, use of cutting mixer or stick blener
+makes the task easy. When done add following substances to dough.</p>
 <ul>
 <li>At least two onions, chop to quite small pieces.</li>
 <li>Garlic, nearly impossible to put too much, and chop em.</li>
 <li>Parsley bush. Shred to pieces.</li>
-<li><span>Salt</span>.</li>
-<li>Pile of <span>cumin</span>.</li>
+<li><span class="italic">Salt</span>.</li>
+<li>Pile of <span class="italic">cumin</span>.</li>
 <li>Chilli power or oil, nearly impossible to put too much.</li>
-<li>Extensive hunk of <span>tahini</span>.</li>
-<li>Splash of water, if needed. In case you added melons to recipe,
-then not.</li>
+<li>Extensive hunk of <span class="italic">tahini</span>.</li>
+<li>Splash of water, if needed. In case you added melons to recipe, then
+not.</li>
 </ul>
-<p>Your goal is to make moist dough. Not wet, or glue like. If the
-dough seem too wet add flour.</p>
-<p>When you think you're done with dough taste it. If it's not good
-add something. If you chose to change the ingredients, just do not
-take out <span>must haves</span> highlighted with different font.
-Falafel is basically a vegetable ball, so you can use nearly
-anything non-meat. Potatoes, carrots, rutabaga, corn, spinach,
-dill, your imagination is the limit. Avoid anything terribly wet,
-melon would be really difficult to get working. All sorts of spices
-are good idea; peppers, turmeric, and herbs will most likely
-improve your falafel. The main point is; if dough tests good, the
+<p>Your goal is to make moist dough. Not wet, or glue like. If the dough seem
+too wet add flour.</p>
+<p>When you think you're done with dough taste it. If it's not good add
+something. If you chose to change the ingredients, just do not take out
+<span class="italic">must haves</span> highlighted with different font. Falafel
+is basically a vegetable ball, so you can use nearly anything non-meat.
+Potatoes, carrots, rutabaga, corn, spinach, dill, your imagination is the
+limit. Avoid anything terribly wet, melon would be really difficult to get
+working. All sorts of spices are good idea; peppers, turmeric, and herbs will
+most likely improve your falafel. The main point is; if dough tests good, the
 end product will be good.</p>
 <h3>The Algorithm - 2 persons needed</h3>
-<p>Put litre or so oil to pot and get it hot. Good temperature is
-not far from ignition point, or what ever make you a bit
-afraid.</p>
-<p>Make balls out of the dough. Using two spoons is good method to
-do this. Size of a ball is roughly same what you would think a
-proper meat ball should look like. Avoid doing super large balls,
-they don't cook from middle at all.</p>
-<p>The first ball is a tester. If ball breaks while boiling it your
-dough is too wet. Aim is to make balls crisp on surface soft from
-inside.</p>
-<p>Once a test ball is successfully done it's time to make
-production line. One person rolls dough balls, while the another
-frying. Doing this alone is guaranteed misery with half of the
-falafel ending up either burned or raw.</p>
+<p>Put litre or so oil to pot and get it hot. Good temperature is not far from
+ignition point, or what ever make you a bit afraid.</p>
+<p>Make balls out of the dough. Using two spoons is good method to do this.
+Size of a ball is roughly same what you would think a proper meat ball should
+look like. Avoid doing super large balls, they don't cook from middle at
+all.</p>
+<p>The first ball is a tester. If ball breaks while boiling it your dough is
+too wet. Aim is to make balls crisp on surface soft from inside.</p>
+<p>Once a test ball is successfully done it's time to make production line. One
+person rolls dough balls, while the another frying. Doing this alone is
+guaranteed misery with half of the falafel ending up either burned or raw.</p>
 </body>
 </html>
