--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<style>A{background:0 0;text-decoration:none}BODY{font-size:16px}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.b A.a{background-position:0 -116px}P.b A.b{background-position:0 0}P.b A.l{background-position:0 -35px}P.b A.o{background-position:0 -60px}P.b A.r{background-position:0 -85px}P.b A{height:31px;padding-left:88px;display:inline-block;background:url(sprite.png)}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
+<style>
+A{text-decoration:none}
+BODY{font-size:16px}
+DIV.j{margin-left:16px}
+H1{font-size:16px;font-weight: bold}
+P.a{margin-left:64px}
+P.j{margin-left:32px}
+TABLE{margin-left:16px}
+TD.d{text-indent:8px}
+</style>
 <meta content="text/html; charset=utf-8" http-equiv=Content-Type>
 <link href=kerolasa.png rel=icon type=image/png>
 <link rel=canonical href=https://kerolasa.iki.fi>
@@ -15,7 +24,7 @@
 </head>
 <body>
 <section itemscope itemtype=http://schema.org/Person>
-<h4>work</h4>
+<h1>work</h1>
 <p class=j>address<br></p>
 <p class=a>
 <span itemprop=worksFor itemscope itemtype=http://schema.org/Organization>
@@ -38,7 +47,7 @@ Sami Kerola<br>
 </tr>
 </table>
 </div>
-<h4>home</h4>
+<h1>home</h1>
 <div class=j>
 <table>
 <tr>
