--- a/filetimes.html
+++ b/filetimes.html
@@ -6,11 +6,9 @@
 <meta name="classification" content="personal home page">
 <meta name="contact_addr" content="kerolasa@iki.fi">
 <meta name="copyright" content="Copyright (C)2003 Sami Kerola">
-<meta name="description" content=
-"file system timestamps atime, ctime and mtime explained">
+<meta name="description" content="file system timestamps atime, ctime and mtime explained">
 <meta name="distribution" content="global">
-<meta name="abstract" content=
-"file system timestamps atime, ctime and mtime explained">
+<meta name="abstract" content="file system timestamps atime, ctime and mtime explained">
 <meta name="keywords" content="file, times">
 <meta name="language" content="en">
 <meta name="owner" content="Sami Kerola">
@@ -20,15 +18,6 @@
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>What are atime, ctime and mtime?</title>
-
-<style xml:space="preserve" type="text/css">
-/*<![CDATA[*/
-BODY {
-   max-width: 700px;
-}
-
-/*]]>*/
-</style>
 </head>
 <body>
 <h3>What are atime, ctime and mtime?</h3>
