web: better second page, and two column travel checklist
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/second.html
+++ b/second.html
@@ -20,19 +20,34 @@
 <title>Sami Kerola's second page</title>
 </head>
 <body>
-<h3>Useful stuff mostly for me or my friends.</h3>
-<p><a href="/">My contact information</a><br></p>
-<p><a href="thaimaa.html">Thaimaan lomamatka</a><br>
-<a href="matka2003.html">Autoloma itäeuroopassa</a><br>
-<a href="matka2004/">Mukamatkojen oopperamatka</a><br>
+<h1>reminders</h1>
+<p>
 <a href="travelchecklist.html">Travel checklist</a><br>
-<a href="matti.html">Matti Nykänen - Elämä on laiffia</a><br>
+<a href="measurements.html">My measurements to make buying clothes easier</a>
+</p>
+<h1>food and drinks</h1>
+<p>
 <a href="falafel.html">Falafel</a><br>
 <a href="lettu.html">Perunalettu</a><br>
-<a href="lp.html">Lastensuojelua ja sensuuria</a><br>
 <a href="lasagna.html">Lasagna recipe</a><br>
-<a href="measurements.html">My measurements to make buying clothes easier</a></p>
-<p><a href="differences.html">Mitigating the Obfuscation Circumscribing the Three Primary Unix Shells</a><br>
+<a href="amsterdam_pubs.html">Amsterdam beer recommendations</a><br>
+<a href="london_pubs.html">London beer recommendations</a><br>
+<a href="tea.html">Tea tasting notes</a>
+</p>
+<h1>ajatuksia ja mielipiteitä</h1>
+<p>
+<a href="matti.html">Matti Nykänen - Elämä on laiffia</a><br>
+<a href="lp.html">Lastensuojelua ja sensuuria</a><br>
+</p>
+<h1>lomia</h1>
+<p>
+<a href="thaimaa.html">Thaimaan lomamatka</a><br>
+<a href="matka2003.html">Autoloma itäeuroopassa</a><br>
+<a href="matka2004/">Mukamatkojen oopperamatka</a><br>
+</p>
+<h1>computers</h1>
+<p>
+<a href="differences.html">Mitigating the Obfuscation Circumscribing the Three Primary Unix Shells</a><br>
 <a href="load.html">What system load means</a><br>
 <a href="logger.html">He's a logger(1), and he's okay</a><br>
 <a href="filetimes.html">What are atime, ctime and mtime?</a><br>
@@ -41,9 +56,11 @@
 <a href="dotcommand.html">What difference dot command and executable scripts has</a><br>
 <a href="was/index.html">WebSphere Application Server stop / start script</a><br>
 <a href="number2numerum.sh">Script converting number to english numeral</a><br>
-<a href="amsterdam_pubs.html">Amsterdam beer recommendations</a><br>
-<a href="london_pubs.html">London beer recommendations</a><br>
-<a href="tea.html">Tea tasting notes</a></p>
-<p><a class="out" href="http://dhcpd-pools.sourceforge.net/">My SourceForge project dhcpd-pools</a></p>
+<a href="http://dhcpd-pools.sourceforge.net/">My SourceForge project dhcpd-pools</a>
+</p>
+<h1>contact info</h1>
+<p>
+<a href="/">Sami's phone number, email, etc</a>
+</p>
 </body>
 </html>
