--- a/travelchecklist.html
+++ b/travelchecklist.html
@@ -8,7 +8,7 @@
 <meta name="classification" content="advisory" />
 <meta name="contact_addr" content="kerolasa@iki.fi" />
 <meta name="copyright" content="Copyright Sami Kerola" />
-<meta name="description" content="traveling items" />
+<meta name="description" content="before travel checklist" />
 <meta name="distribution" content="global" />
 <meta name="abstract" content="what to take with you when travelling" />
 <meta name="keywords" content="travelling, travel, suitcase, contents, items, reminder" />
@@ -19,10 +19,16 @@
 <meta name="robots" content="index, follow" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link type="text/css" rel="stylesheet" href="kerolasa.css" />
-<title>Before travel items checklist</title>
+<title>Before travel checklist</title>
+<style>
+.contentColumn { width: 300px; float: left; }
+#container { width: 600px; }
+</style>
 </head>
 <body>
-<h1>Travel items checklist</h1>
+
+<div id="container">
+<div class="contentColumn">
 
 <h2>Suitcase</h2>
 
@@ -73,6 +79,9 @@ Other.
 <li>Umbrella</li>
 <li>Check the luggage address label</li>
 </ul>
+
+</div>
+<div class="contentColumn">
 
 <h2>Things to carry</h2>
 
@@ -125,7 +134,10 @@ Wear.
 <li>Belt</li>
 </ul>
 
-Remember to remove.
+</div>
+<div class="contentColumn">
+
+<h2>Removals</h2>
 
 <ul>
 <li>Anything sharp</li>
@@ -133,11 +145,16 @@ Remember to remove.
 <li>Office items, such as door pass</li>
 </ul>
 
-Finally.
+</div>
+<div class="contentColumn">
+
+<h2>Alarm</h2>
 
 <ul>
 <li>Put the alarm on to wake you up at right time to get to airport</li>
 </ul>
+
+</div>
 
 </body>
 </html>
