tea: Wild Berry, Mango & Strawberry, Sencha Rose, and Yorkshire loose
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -33,6 +33,41 @@
 <p>date.  type.  text</p>
 -->
 
+<h2>Asda -
+<a href="https://groceries.asda.com/product/fruit-herbal-tea/asda-wild-berry-20-tea-bags/910001603437">Wild Berry</a>
+(4)</h2>
+<p>2023-01-03.  Herbal tea.  Another excellently cheap and really nice tea,
+but not as good the mango &amp; strawberries.  Still plenty good, and
+excellent value for money.  I am pretty sure I will get this tea again.</p>
+
+<h2>Asda -
+<a href="https://groceries.asda.com/product/fruit-herbal-tea/asda-mango-strawberry-20-tea-bags/1000013420524">Mango &amp; Strawberry</a>
+(5)</h2>
+<p>2023-01-03.  Herbal tea.  Super cheap, and absolutely brilliant.  Taste
+is sligtly sweet and very berry like with some floral things going on.  Did
+I already tell the price is great, get this if you ever happen to visit
+Asda!</p>
+
+<h2>Sainsbury's -
+<a href="https://www.sainsburys.co.uk/gol-ui/product/all-tea-/sainsburys-sencha-rose-green-loose-tea--taste-the-difference-100g">Sencha Rose Green Loose Leaf Tea</a>
+(4)</h2>
+<p>2022-12-16.  Green tea.  Hold on, this is not only a green tea, there is
+some aromatic bits in the mix, and they make this really nice.  The primary
+aroma is green tea, but additional flavors really improve the taste.  But be
+aware this product can also be a little irritating to stomach, or that's at
+least how I felt when having whole pot of this tea.  Maybe one should not
+have so much green tea, but I drink black tea quite often similar amount
+without issue.</p>
+
+<h2>Taylors of Harrogate -
+<a href="https://www.sainsburys.co.uk/gol-ui/product/all-tea-/yorkshire-tea-bags-250g">
+Yorkshire Tea Loose Leaf Tea</a>
+(3)</h2>
+<p>2022-12-03  Black tea.  Got this tea from the Sainsbury's without much of
+expectations.  Overall good value reasonable tea without any surprises.  The
+reason why not to give any higher score is as simple as this is a slightly
+boring tea.</p>
+
 <h2>Sainsbury's -
 <a href="https://www.sainsburys.co.uk/gol-ui/product/everyday-tea/sainsburys-gold-label-loose-tea-250g">Fairly Traded Gold Label Loose Leaf Tea 250g</a>
 (2)</h2>
