tea: update link to Melvins Ginger Tea
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -197,7 +197,7 @@ are so many other teas in same price range that getting know with them is
 more useful than going back to fairly ordinary tea.</p>
 
 <h2>Melvins -
-<a href="http://dukkapu.com/melvins-tangawizi-chai-ginger-tea-250g">Tangawizi Tea</a>
+<a href="https://melvinstea.com/product/melvins-ginger-tea/">Tangawizi Tea</a>
 (4)</h2>
 <p>2021-01-31.  Ginger spiced black tea.  This is a nice prouduct.  The tea
 is not very strong, being a bit generous when brewing is good idea.
