google: add canonical page links
Reference: https://developers.google.com/search/docs/crawling-indexing/consolidate-duplicate-urls?sjid=9941697425876659672-EU
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/HOWTO-Basic-Debugging.html
+++ b/HOWTO-Basic-Debugging.html
@@ -4,6 +4,7 @@
 <html>
 <head>
 <title>HOWTO-Basic-Debugging - 8 August 2001</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/HOWTO-Basic-Debugging.html" />
 </head>
 <body bgcolor="#FFFFFF">
 <pre xml:space="preserve">
