--- a/amsterdam_pubs.html
+++ b/amsterdam_pubs.html
@@ -22,6 +22,7 @@
   <link type="text/css" rel="stylesheet" href="kerolasa.css" />
 
   <title>Amsterdam pub recommendations</title>
+  <link rel="canonical" href="https://kerolasa.iki.fi/amsterdam_pubs.html" />
 </head>
 
 <body>
