--- a/defunct.html
+++ b/defunct.html
@@ -5,6 +5,7 @@
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>How can I kill a defunct process</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/defunct.html" /
 </head>
 <body>
 <p>From: Logan Shaw (logan@ptolemy-ethernet.arc.nasa.gov)<br>
