--- a/differences.html
+++ b/differences.html
@@ -1,5 +1,8 @@
 <html>
-<head><title>Shell Differences - AZSAGE Presentation, 9/16/97</title></head>
+<head>
+<title>Shell Differences - AZSAGE Presentation, 9/16/97</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/differences.html" />
+</head>
 <pre>
 
                           ----------------------------
