--- a/dotcommand.html
+++ b/dotcommand.html
@@ -21,6 +21,7 @@
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>What difference dot command and executable scripts has?</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/dotcommand.html" />
 </head>
 <body>
 <h2>What difference dot command and executable scripts has</h2>
