--- a/falafel-en.html
+++ b/falafel-en.html
@@ -25,6 +25,7 @@ SPAN.italic {font-style: italic}
 <meta name="robots" content="index, follow">
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <title>Sami's Falafel</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/falafel-en.html" />
 </head>
 <body>
 <h2>Sami's Falafel</h2>
