--- a/lasagna.html
+++ b/lasagna.html
@@ -21,6 +21,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <TITLE>Lasagna recipe</TITLE>
+  <link rel="canonical" href="https://kerolasa.iki.fi/lasagna.html" />
 </HEAD>
 
 <BODY>
