--- a/lettu.html
+++ b/lettu.html
@@ -20,6 +20,7 @@
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Perunalettu</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/lettu.html" />
 </head>
 <body>
 <h2>Perunalettu</h2>
