--- a/load.html
+++ b/load.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link type="text/css" rel="stylesheet" href="kerolasa.css" />
 <title>Processing And Load Averages</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/load.html" />
 </head>
 <body>
 <h2>Processing And Load Averages</h2>
