--- a/logger.html
+++ b/logger.html
@@ -20,6 +20,7 @@
 <meta name="robots" content="index, follow">
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <title>He's a logger(1), and he's okay</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/logger.html" />
 </head>
 <body>
 <section itemscope itemtype="http://schema.org/SoftwareApplication">
