--- a/london_pubs.html
+++ b/london_pubs.html
@@ -19,6 +19,7 @@
 <meta name="robots" content="index, follow" />
 <link type="text/css" rel="stylesheet" href="kerolasa.css" />
 <title>London pub recommendations</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/london_pubs.html" />
 </head>
 <body>
 <h1>London pub recommendations</h1>
