--- a/matka2003.html
+++ b/matka2003.html
@@ -11,6 +11,7 @@
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Itäeuroopan loma 2003</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/matka2003.html" />
 </head>
 <body>
 <h2>Itäeuroopan loma 2003</h2>
