--- a/matti.html
+++ b/matti.html
@@ -18,6 +18,7 @@
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Matti Nykänen - Elämä on laiffia</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/matti.html" />
 </head>
 <body>
 <h3>Matti Nykänen - Elämä on laiffia</h3>
