--- a/measurements.html
+++ b/measurements.html
@@ -12,6 +12,7 @@
 <meta name="robots" content="noindex, nofollow">
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <title>Sami Kerola - clothes size measurements</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/measuremets.html" />
 </head>
 <body>
 <h3>Sami Kerola clothes size measurements</h3>
