--- a/second.html
+++ b/second.html
@@ -18,6 +18,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <title>Sami Kerola's second page</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/second.html" />
 </head>
 <body>
 <h1>reminders</h1>
