--- a/tea.html
+++ b/tea.html
@@ -16,6 +16,7 @@
 <meta name="robots" content="index, follow">
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <title>Sami's tea tasting notes</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/tea.html" />
 </head>
 <body>
 <h1>Sami's tea tasting notes</h1>
