--- a/thaimaa.html
+++ b/thaimaa.html
@@ -19,6 +19,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <title>Thaimaan matka</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/thaimaa.html" />
 </head>
 <body>
 <p>---------- Forwarded message ----------<br>
