--- a/travelchecklist.html
+++ b/travelchecklist.html
@@ -20,6 +20,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link type="text/css" rel="stylesheet" href="kerolasa.css" />
 <title>Before travel checklist</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/travelchecklist.html" />
 <style>
 .contentColumn { width: 300px; float: left; }
 #container { width: 600px; }
