--- a/filetimes.html
+++ b/filetimes.html
@@ -18,6 +18,7 @@
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>What are atime, ctime and mtime?</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/filetimes.html" />
 </head>
 <body>
 <h3>What are atime, ctime and mtime?</h3>
