--- a/lp.html
+++ b/lp.html
@@ -19,6 +19,7 @@
 <link type="text/css" rel="stylesheet" href="kerolasa.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Lastensuojelua ja sensuuria</title>
+<link rel="canonical" href="https://kerolasa.iki.fi/lp.html" />
 </head>
 <body>
 <h1>Lastensuojelua ja sensuuria</h1>
