update and add additional online profiles
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -72,14 +72,16 @@ Sami Kerola<br>
 <span itemprop=gender content=male></span>
 <span itemprop=sameas content="https://en.gravatar.com/kerolasa"></span>
 <span itemprop=sameas content="https://github.com/kerolasa/"></span>
+<span itemprop=sameas content="https://paypal.me/kerolasa"></span>
 <span itemprop=sameas content="https://savannah.gnu.org/users/kerolasa"></span>
 <span itemprop=sameas content="https://sourceforge.net/u/kerolasa/profile/"></span>
-<span itemprop=sameas content="https://stackoverflow.com/users/796585/sami-kerola"></span>
+<span itemprop=sameas content="https://stackoverflow.com/users/796585/kerolasa"></span>
+<span itemprop=sameas content="https://twitter.com/kerolasa"></span>
+<span itemprop=sameas content="https://wa.me/+447761367138"></span>
+<span itemprop=sameas content="https://www.instagram.com/kerolasa/"></span>
 <span itemprop=sameas content="https://www.linkedin.com/in/kerolasa/"></span>
 <span itemprop=sameas content="https://www.openhub.net/accounts/kerolasa"></span>
 <span itemprop=sameas content="https://www.ratebeer.com/user/110452/"></span>
-<span itemprop=sameas content="https://www.instagram.com/kerolasa/"></span>
-<span itemprop=sameas content="https://twitter.com/kerolasa"></span>
 </section>
 <p><a href=second.html>Second page.</a></p>
 </body>
