add Signal and iMessage Contact Key Verification to contact info
If someome wants to talk with me they should at least have a way to do it securely.

Signed-off-by: Sami Kerola <Sami Kerola kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -51,12 +51,18 @@ Sami Kerola<br>
 <div class=j>
 <table>
 <tr>
+<td>email</td>
+<td class=d><a href=mailto:kerolasa@iki.fi itemprop=email content=kerolasa@iki.fi>kerolasa@iki.fi</a></td>
+</tr>
+<td>signal</td>
+<td class=d><a href="https://signal.me/#eu/P9xAT-l9DPR97eR8O9ca2rqcTb5mColdvzoYVZGN0epLSREepVFOxIr4c2T9OAWO" itemprop=signal>contact</a></td>
+</tr>
+<tr>
 <td>mobile</td>
 <td class=d><a href=tel:+447761367138 itemprop=telephone>+44 77613 67138</a></td>
 </tr>
-<tr>
-<td>email</td>
-<td class=d><a href=mailto:kerolasa@iki.fi itemprop=email content=kerolasa@iki.fi>kerolasa@iki.fi</a></td>
+<td><a href=https://support.apple.com/en-gb/HT213465>contact key</a></td>
+<td class=d>APKTIDkqFNy04Y3VgPf076wUdSnPVMCeQCgsZr_yJKCXf_pwXvsg</td>
 </tr>
 <tr>
 <td>gnupg</td>
