update index page font size to be bigger
Bad eyesight and website scaling works better with relative sizes.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 <style>
 A{text-decoration:none}
-BODY{font-size:16px}
-DIV.j{margin-left:16px}
-H1{font-size:16px;font-weight: bold}
-P.a{margin-left:64px}
-P.j{margin-left:32px}
-TABLE{margin-left:16px}
-TD.d{text-indent:8px}
+BODY{font-size:1.6em}
+DIV.j{margin-left:1.0em}
+H1{font-weight: bold}
+P.a{margin-left:5.0em}
+P.j{margin-left:2.0em}
+TABLE{margin-left:1.0em}
+TD.d{text-indent:1.0em}
 </style>
 <meta content="text/html; charset=utf-8" http-equiv=Content-Type>
 <link href=kerolasa.png rel=icon type=image/png>
