update travel checklist
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/travelchecklist.html
+++ b/travelchecklist.html
@@ -22,8 +22,8 @@
 <title>Before travel checklist</title>
 <link rel="canonical" href="https://kerolasa.iki.fi/travelchecklist.html" />
 <style>
-.contentColumn { width: 300px; float: left; }
-#container { width: 600px; }
+.contentColumn { width: 20em; float: left; }
+#container { width: 40em; }
 </style>
 </head>
 <body>
@@ -79,6 +79,8 @@ Other.
 <ul>
 <li>Small towel</li>
 <li>Umbrella</li>
+<li>Gym clothes</li>
+<li>Swim suit</li>
 <li>Check the luggage address label</li>
 </ul>
 
@@ -91,13 +93,11 @@ Paperwork.
 
 <ul>
 <li>Passport</li>
-<li>Covid test results</li>
-<li>Check the destination country goverment regulations requirements for such as <a href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk">passenger locator form</a></li>
 <li>Flight tickets</li>
 <li>Hotel reservation. Check the address</li>
 <li>Time table, agenda, and such</li>
 <li>Insurance papers</li>
-<li>Country specific visa print out(s), such as ESTA</li>
+<li>Country specific visa, such as <a href="https://esta.cbp.dhs.gov/">ESTA</a></li>
 </ul>
 
 Other things in bag.
@@ -144,7 +144,6 @@ Wear.
 <ul>
 <li>Anything sharp</li>
 <li>Wallet rubbish, reciets, unuseful currency, coins</li>
-<li>Office items, such as door pass</li>
 </ul>
 
 </div>
