add qr-code to index page
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -90,5 +90,7 @@ Sami Kerola<br>
 <span itemprop=sameas content="https://www.ratebeer.com/user/110452/"></span>
 </section>
 <p><a href=second.html>Second page.</a></p>
+<p>Contact info as QR code.<br>
+<img src="contact.png" alt="contact info QR code"></p>
 </body>
 </html>
