--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ TD.d{text-indent:1.0em}
 <link href=kerolasa.png rel=icon type=image/png>
 <link rel=canonical href=https://kerolasa.iki.fi>
 <meta content="width=device-width,minimum-scale=1,initial-scale=1" name=viewport>
-<meta name="description" content="Personal homepage of Sami Kerola including contact info.">
+<meta name="description" content="Sami Kerola's personal homepage">
 <meta property="og:image" content="https://kerolasa.iki.fi/me_london.jpg">
 <meta content=en name=language>
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
@@ -74,8 +74,6 @@ Sami Kerola<br>
 </tr>
 </table>
 </div>
-<span itemprop=birthDate content=1977-04-28></span>
-<span itemprop=gender content=male></span>
 <span itemprop=sameas content="https://en.gravatar.com/kerolasa"></span>
 <span itemprop=sameas content="https://github.com/kerolasa/"></span>
 <span itemprop=sameas content="https://paypal.me/kerolasa"></span>
